--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         line-height: 15px;
                         letter-spacing: 0px;
                       ">
-                    陈冲
+                    王明泽
                   </span>
                 </div>
               </div>
@@ -149,7 +149,7 @@
                   <div class="dplugin-mobile-addfileed-box" style="height: 1rem; width: 1rem">
                     <!---->
                     <div class="dplugin-mobile-addfileed">
-                      <img width="100%" height="100%" src="./index_files/3788805.jpg" />
+                      <img width="100%" height="100%" src="./index_files/20211118211506.jpg" />
                     </div>
                   </div>
                   <!---->
@@ -291,7 +291,7 @@
                         line-height: 15px;
                         letter-spacing: 0px;
                       ">
-                    2019141095
+                    2019141098
                   </span>
                 </div>
               </div>
